# edin-mls-25-spring

./: .gitignore  README.md  main.py  pyproject.toml  results.txt
misc-src/: memory-test.py
task-1/: chart_nb_knn.ipynb  chart_notebook_distance.ipynb  compare_kmeans.py  compare_knn.py  cupy_distance_functions.py  cupy_knn.py  cupy_knn_L2.py  hnsw_ann.py  numpy_distance_functions.py  plot_elbow.py  task.py  task1_performance_comparsion.ipynb  test_cuvs.py  test_import.py  test_numpy.py  time_k_means.py  torch_distance_functions.py  torch_task.py  triton-knn.py  triton-task.py  triton_task.py
task-1/elbow_plot/: elbow_losses.csv  generate_elbow_plot_data.py  plot_elbow.py
task-1/old/: triton-task.py
task-2/: README.md  autoscaler.py  load_balancer_round_robin.py  request_queue.py  requirements.txt  serving_rag_v0.py  serving_rag_v1.py
task-2/rag-pipeline/: request_queue.py
task-2/test_results/: README.md  V0_ideal_end_to_end_results.csv  V1_ideal_end_to_end_results.csv  load_balancer_round_robin_ideal_end_to_end_results.csv  load_balancer_round_robin_poisson_end_to_end_results.csv  plot_results.py
task-2/tests/: test_end_to_end.py
