[project]
name = "edin-mls-25-spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "jupyter>=1.1.1",
    "libcirkit>=0.2.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=1.24.0",
    "pandas>=2.2.3",
    "pydantic>=2.0.0",
    "seaborn>=0.13.2",
    "torch>=2.0.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.30.0",
    "triton>=3.2.0",
    "uvicorn>=0.22.0",
]
